# HETerogeneous-vectorized-or-Parallel

./: CHANGELOG.md  CMakeLists.txt  README.md  hetp_main.F90  hetp_main.ftn90  hetp_mod.ftn90  mach_hetp_mod.ftn90
src/: CMakeLists.txt
src/Test/: CMakeLists.txt  hetp_main.F90
src/core/: CMakeLists.txt  hetp_mod.F90
src/test/: CMakeLists.txt  hetp_main.F90
